fixed transaction button layout on mobile

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -726,6 +726,7 @@ textarea {color: #333}
 .mobile-logo {font-size: 1.2em; color: #1ab188;}
 .mobile-nav li {display: block !important;}
 .mobile-nav {height: 100vh !important; margin-top: 30%;}
+.trans-button {margin: 7% 0 5% 10%; width: 200px;}
 /* For Phones */
 @media screen and (max-width: 767px) {
   .cal-form-view {margin-left: -6%; padding-left: 0; padding-right: 0;}
@@ -761,6 +762,7 @@ textarea {color: #333}
   .home-search-bar {width: 85%;}
   .btn-home-margin {margin-right: 30px;}
   .hamburger {display: none;}
+  .trans-button {margin: 0 0 0 30px;}
   .btn-xxl {
     padding: 12px 26px;
     font-size: 1.7em;
